gba_test_macros/tests/trybuild/duplicate_name.stderr
error[E0428]: the name `foo` is defined multiple times
 --> tests/trybuild/duplicate_name.rs:9:1
  |
6 | fn foo() {}
  | -------- previous definition of the value `foo` here
...
9 | fn foo() {}
  | ^^^^^^^^ `foo` redefined here
  |
  = note: `foo` must be defined only once in the value namespace of this module
