gba_test_macros/tests/trybuild/duplicate_name.rs
#![feature(custom_test_frameworks)]

use gba_test_macros::test;

#[test]
fn foo() {}

#[test]
fn foo() {}

fn main() {}
